Update on the mobyle interface: new citation

--- a/mobyle/imogene.xml.in
+++ b/mobyle/imogene.xml.in
@@ -17,9 +17,10 @@
                     motifs and modules</text>
       </description>
       <authors>H. Rouault, M. Santolini</authors>
-      <reference> H. Rouault, M. Santolini, F. Schweisguth and V. Hakim
-                (2013), Imogene: identification of motifs and cis regulatory
-                modules underlying gene co-regulation, submitted. </reference>
+      <reference> H. Rouault, M. Santolini, F. Schweisguth and V. Hakim (2014),
+                Imogene: identification of motifs and cis-regulatory modules
+                underlying gene co-regulation.
+                Nucl. Acids Res. 42 (10): 6128-6145.</reference>
       <reference> H. Rouault, K. Mazouni, L. Couturier, V. Hakim and F.
                 Schweisguth (2010), Genome-wide identification of
                 cis-regulatory motifs and modules underlying gene coregulation
