mail modification in mobyle interface

--- a/mobyle/imogene.xml.in
+++ b/mobyle/imogene.xml.in
@@ -49,7 +49,7 @@
             trouble concerning its installation or bugs should be addressed on
             <em>github</em>.</p> <p>Please, feel free to contact us for any
             question concerning <em>Imogene</em>: Herve Rouault
-            <a href="mailto:herve.rouault@pasteur.fr">herve.rouault@pasteur.fr</a>,
+            <a href="mailto:rouault@lps.ens.fr">rouault@lps.ens.fr</a>,
             Marc Santolini <a href="mailto:marc.santolini@lps.ens.fr">marc.santolini@lps.ens.fr</a>.</p>
         </div>
       </comment>
